Make article body textarea higher and limit it's resizing to prevent container overflow

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -12,3 +12,8 @@
     min-height: 300px;
     background-size: cover;
 }
+
+.body-textarea {
+    height: 20vh;
+    max-width: 100%;
+}
